--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   margin: 0 10px;
 }
 
+/* Login */
+
+/* Recipes */
+
+/* RecipeDetails & RecipeInProgress */
 .recipe-photo {
   height: 25vh;
   overflow: hidden;
@@ -45,7 +50,7 @@ li > label {
 .instructions {
   background-color: var(--text-bg-color);
   border-radius: 5px;
-  height: calc(90vh - (1.75rem + 3em + 30px));
+  max-height: calc(90vh - (1.75rem + 3em + 30px));
   margin: 0 10px 80px;
   overflow: scroll;
   padding: 5px;
@@ -101,6 +106,9 @@ li > label {
   background-color: #c4c4c4;
 }
 
+/* Profile */
+
+/* Trybe */
 .meals {
   align-items: center;
   background: #0fa36b;
