--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,8 @@ li > label {
 .instructions {
   background-color: var(--text-bg-color);
   border-radius: 5px;
-  max-height: calc(90vh - (1.75rem + 3em + 30px));
   margin: 0 10px 80px;
+  max-height: calc(90vh - (1.75rem + 3em + 30px));
   overflow: scroll;
   padding: 5px;
 }
@@ -59,7 +59,9 @@ li > label {
 .video-container {
   height: 0;
   margin-top: -70px;
-  padding-bottom: 56.25%; /* 16:9 */
+  padding-bottom: 56.25%;
+
+  /* 16:9 */
   position: relative;
 }
 
