--- a/src/App.css
+++ b/src/App.css
@@ -122,6 +122,10 @@
   margin: 0 2px 15px 5px;
 }
 
+.categories-ctn .ctg--clicked {
+  background-color: rgb(108, 227, 79);
+}
+
 .recipes-card-ctn {
   display: flex;
   flex-direction: column;
@@ -260,6 +264,10 @@ li > label {
   background-color: #a6d1e6;
   box-shadow: none;
   padding: 5px;
+}
+
+.form-cnt button:disabled {
+  background-color: gray;
 }
 
 .footer-ctn p {
